[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbplot"
version = "0.4"
description = "Command-line utility to quickly plot files in a Jupyter notebook"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nicolas Burrus", email = "nicolas@burrus.name"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "notebook>=7.0.0",
    "nbformat>=5.1",
    "traitlets",
    "matplotlib",
    "mplcursors",
    "numpy",
    "ipympl",
]

[project.urls]
Homepage = "https://github.com/nburrus/nbplot"
"Bug Tracker" = "https://github.com/nburrus/nbplot/issues"

[project.scripts]
nbplot = "nbplot:main"

[tool.hatch.build.targets.wheel]
packages = ["nbplot"]

[tool.hatch.build.targets.wheel.sources]
"nbplot" = "nbplot"

[tool.hatch.build]
include = [
    "nbplot/*.py",
    "nbplot/*.ipynb",
    "nbplot/templates/*.ipynb",
]
