[metadata]
# replace with your username:
name = nbplot
version = 0.1
author = Nicolas Burrus
author_email = nicolas@burrus.name
description = Command-line utility to quickly plot files in a Jupyter notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nburrus/nbplot
project_urls =
    Bug Tracker = https://github.com/nburrus/nbplot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    notebook
    nbformat>=5.1
    traitlets
    matplotlib
    mplcursors
    numpy

[options.entry_points]
console_scripts =
    nbplot = nbplot:main

[options.package_data]
* = templates/*.ipynb
nbplot = *.ipynb
